feat(change): implemented post /change/merge (#6)
* feat(change): implement POST /change/merge
Fixes #5

* test(change): added tests for merge changes

* fix(change): changes based on PR comments

* style: prettier

* test(change): updated snaps because of changes

* refactor(change): changed type order

* test(change): changed filename
